# devscale-pyton-ai-assignment-1

./: Makefile  README.md  dota2.db  pyproject.toml
alembic/: env.py
alembic/versions/: d50b80e0394f_.py
app/: main.py
app/core/: schema.py  settings.py
app/models/: database.py  engine.py
app/modules/heroes/: router.py  serializer.py
app/modules/players/: router.py  serializer.py
app/utils/: query_params.py
